# KRNKsite

./: Krnkdata.sql  README.md  ToDo.md
backend/: .gitignore  README.md  main.py  pyproject.toml  server.py  temp.js
backend/app/: jwt_utils.py
backend/app/auth/: auth_bearer.py
backend/app/models/: associations.py  paper.py  summary.py  topic.py  user.py  utils.py
backend/app/routes/: associations.py  papers.py  summaries.py  topics.py  users.py
backend/app/schemas/: associations_schema.py  paper_schema.py  summary_schema.py  topic_schema.py  user_schema.py
backend/config/: database.py  jwt_config.py
backend/services/: arxiv_services.py  scraper.py  services_manager.py  utils.py
backend/tests/: services_test.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: Digest.jsx  InterestCard.jsx  InterestList.jsx  LogAndReg.jsx  UserCard.jsx
frontend/src/components/Article/: Article.jsx  Article.module.css
frontend/src/components/Context/: AuthContext.jsx
frontend/src/components/Featured/: Featured.jsx  Featured.module.css
frontend/src/components/InterestCard/: InterestCard.jsx  InterestCard.module.css
frontend/src/components/Navbar/: Navbar.jsx  Navbar.module.css
frontend/src/components/Topic/: Topic.jsx  Topic.module.css
frontend/src/components/UserCard/: UserCard.jsx
frontend/src/components/UserForm/: UserForm.jsx  UserForm.module.css
frontend/src/views/: Dashboard.jsx  Dashboard.module.css  Home.jsx  Home.module.css
